Bug #1830798: Text is overlapping on "Edit access"
behatnotneeded

(cherry picked from commit 99015467bd68d9da99e1a1f38da25f67554abffb)

--- a/htdocs/theme/raw/sass/typography/_tables.scss
+++ b/htdocs/theme/raw/sass/typography/_tables.scss
@@ -248,8 +248,8 @@ table.table tr {
 .th-shared-heading {
     position: absolute;
     top: -8px;
-    left: 13px;
-    width: 200%;
+    left: 0;
+    width: 100px;
     text-align: center;
 }
 
